test/modules/diten/main-module-flag/multiple_modules_no_main1.chpl
module M1 {
  writeln("Hi from M1");
}

module M2 {
  writeln("Hi from M2");
}
